# pynq-ssd

./: .gitignore  README.md  adc  config  dac  dac7678.c  devI2C.c  ltc2309  ltc2309.c  st.cmd
configure/: CONFIG_SITE
documentation/: Hermes4_pinouts.odt  asic_pins.txt  bptTherm10kdegC_Maia.dbd  bptTherm10kdegC_strip.dbd  detector_data_flow.odt  hermes1.txt  maia_cnfg.c  make_breaktable.m  picozed_hermes_ssd_memmap_v1.odt  scepter1.txt  simulator_setup.txt  zDDM_description.doc  zDDM_description.odt
documentation/mech_drawings/: 510XXX.stp  LS25 OUTLINE.IGS  LS25 OUTLINE.stp  LS25 OUTLINE_lucas.stp  LS25-5_full.dwb  c-0208717-01-e-3d.stp  c-2-6609104-9-a-3d.stp
include/: zDDMRecord.h
op/: adc_scan.sh  adc_stop.sh  adcs  clear_dacs  dacloop.m  dacs1  dacs2  detector  detector.adl  detector_BAK.adl  disabled  enabled  enables.adl  epics_fitting.txt  ext_enabled  factors.dat.tmp  hermes.mac  hermes3_2chip.ui  hermes_dacs.adl  newDisplay.adl  newDisplay_BAK.adl  newdet  newdet.adl  newdet_BAK.adl  on-chip-dacs.adl  on-chip-dacs_BAK.adl  on-chip_dacs.adl  on-chip_dacs_BAK.adl  params.adl  params_BAK.adl  scaler_plot.adl  scaler_plot_BAK.adl  set_dacs  setup.adl  setup_BAK.adl  si_detect2.mac  spi_adc.adl  spi_adc_BAK.adl  spi_dacs.adl  spi_dacs2.adl  (+12 more)
trimming/: Makefile  trim_start  trimming
trimming/src/old_src/asic_dac_trim_src/src/: Makefile.am  Makefile.in  Makefile.in.old  Makefile.old  asic_dac_trim  callbacks.h  compile-line.txt  junk.txt  log  main.c  readit.c  testfit.c
trimming/src/old_src/asic_dac_trim_src/src/.deps/: main.P  support.P
(+91 files in other folders)
